# revdemo

./: koohai  koohai.pub  readme.txt  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/koohai/revdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  MD5.h  base_enc.cpp  base_enc.h  md5.cpp  native-lib.cpp
app/src/main/java/com/koohai/encutils/: SecurityMd5Utils.java  SecurityUtils.java  Utils.java
app/src/main/java/com/koohai/revdemo/: MainActivity.java
app/src/main/java/com/koohai/revdemo/ui/envcheck/: EnvCheckFragment.java  EnvCheckViewModel.java
app/src/main/java/com/koohai/revdemo/ui/gallery/: GalleryFragment.java  GalleryViewModel.java
app/src/main/java/com/koohai/revdemo/ui/home/: HomeFragment.java  HomeViewModel.java
app/src/main/java/com/koohai/revdemo/ui/md5Enc/: Md5EncJavaFragment.java  Md5EncJavaViewModule.java
app/src/main/java/com/koohai/revdemo/ui/slideshow/: SlideshowFragment.java  SlideshowViewModel.java
app/src/main/res/layout/: app_bar_main.xml  fragment_env_check.xml  fragment_home.xml  fragment_md5encjava.xml
app/src/main/res/menu/: activity_main_drawer.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/koohai/revdemo/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
